--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,10 @@
 #Gradle
-org.gradle.jvmargs=-Xmx2048M -Dkotlin.daemon.jvm.options\="-Xmx2048M"
+org.gradle.jvmargs=-Xmx1536m
 
 #Kotlin
 kotlin.code.style=official
+kotlin.mpp.stability.nowarn=true
 
 #Android
 android.useAndroidX=true
+android.enableJetifier=false
